--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "react": "16.13.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-google-recaptcha": "^2.1.0",
+    "react-recaptcha": "^2.3.10",
     "react-slick": "0.25.2",
     "react-swipeable-views": "0.13.9",
     "react-text-loop": "^2.3.0",
