--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-text-loop": "^2.3.0",
     "styled-components": "5.1.0",
     "webpack": "4.43.0",
-    "yup": "^0.32.8"
+    "yup": "^0.32.8",
+    "yup-phone": "^1.2.19"
   }
 }
