--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "next-compose-plugins": "2.2.0",
     "next-images": "1.3.1",
     "nextjs-redirect": "2.0.2",
-    "node-sass": "4.14.1",
+    "node-sass": "^7.0.1",
     "nouislider": "14.4.0",
     "path": "0.12.7",
     "prop-types": "15.7.2",
